Changed pngs to svgs on infoboxes

--- a/src/app/components/main-page/infobox/infobox.component.html
+++ b/src/app/components/main-page/infobox/infobox.component.html
@@ -1,5 +1,13 @@
 <div class="shadow p-3 mb-5 bg-white rounded infoheight" style="width: 300px; margin: 1em; margin-top: 5em">
-  <img src="{{imagePath}}" class="infoicon"/>
+  <svg xmlns="http://www.w3.org/2000/svg" class="infoicon" viewBox="0 0 60 60" *ngIf="imagePath === 0">
+    <path id="ic_monetization_on_24px" d="M32,2A30,30,0,1,0,62,32,30.011,30.011,0,0,0,32,2Zm4.23,48.27V56H28.22V50.21c-5.13-1.08-9.48-4.38-9.81-10.2h5.88c.3,3.15,2.46,5.61,7.95,5.61,5.88,0,7.2-2.94,7.2-4.77,0-2.49-1.32-4.83-8.01-6.42-7.44-1.8-12.54-4.86-12.54-11.01,0-5.16,4.17-8.52,9.33-9.63V8h8.01v5.85a10.606,10.606,0,0,1,8.55,10.17H38.9c-.15-3.33-1.92-5.61-6.66-5.61-4.5,0-7.2,2.04-7.2,4.92,0,2.52,1.95,4.17,8.01,5.73s12.54,4.17,12.54,11.73c-.03,5.49-4.14,8.49-9.36,9.48Z" transform="translate(-2 -2)" fill="#208479"/>
+  </svg>
+  <svg xmlns="http://www.w3.org/2000/svg" class="infoicon" viewBox="0 0 60 43.636" *ngIf="imagePath === 1">
+    <path id="ic_local_shipping_24px" d="M52.818,14.909H44.636V4H6.455A5.471,5.471,0,0,0,1,9.455v30H6.455a8.182,8.182,0,0,0,16.364,0H39.182a8.182,8.182,0,0,0,16.364,0H61V25.818ZM14.636,43.545a4.091,4.091,0,1,1,4.091-4.091A4.085,4.085,0,0,1,14.636,43.545ZM51.455,19,56.8,25.818H44.636V19ZM47.364,43.545a4.091,4.091,0,1,1,4.091-4.091A4.085,4.085,0,0,1,47.364,43.545Z" transform="translate(-1 -4)" fill="#208479"/>
+  </svg>
+  <svg xmlns="http://www.w3.org/2000/svg" class="infoicon" viewBox="0 0 60 54.545" *ngIf="imagePath === 2">
+    <path id="ic_thumb_up_24px" d="M1,55.545H11.909V22.818H1Zm60-30a5.471,5.471,0,0,0-5.455-5.455H38.336L40.927,7.627l.082-.873a4.105,4.105,0,0,0-1.2-2.891L36.918,1,18.973,18.973a5.333,5.333,0,0,0-1.609,3.845V50.091a5.471,5.471,0,0,0,5.455,5.455H47.364a5.418,5.418,0,0,0,5.018-3.327l8.236-19.227A5.388,5.388,0,0,0,61,31V25.791l-.027-.027Z" transform="translate(-1 -1)" fill="#208479"/>
+  </svg>
   <h3 style="color: #005B51; text-align: center">{{boxTitle}}</h3>
   <p style="text-align: center">
     {{infoText}}
