--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -2,7 +2,7 @@
 <div class="container d-flex justify-content-center">
   <div class="row align-self-center">
     <div class="col" *ngFor="let title of boxTitles; let i = index">
-      <app-infobox [boxTitle]="boxTitles[i]" [infoText]="infoTexts[i]" [imagePath]="imagePaths[i]"></app-infobox>
+      <app-infobox [boxTitle]="boxTitles[i]" [infoText]="infoTexts[i]" [imagePath]="i"></app-infobox>
     </div>
   </div>
 </div>
