grammar mistakes and small code changes

--- a/src/app/components/add-money/load-money-button/load-money-button.component.html
+++ b/src/app/components/add-money/load-money-button/load-money-button.component.html
@@ -1,5 +1,5 @@
 
-<div class="container shadow bg-white rounded cursor" (click)="chosedMe(amount)">
+<div class="container shadow bg-white rounded cursor" (click)="chosenMe(amount)">
   <div class="row">
     <div class="col">
       <img src="../../../../assets/img/Icons/money_icon.png" alt="money" class="infoicon"/>
