grammar and language changes for carlist (car-item in todo of maxwell so no changes there)

--- a/src/app/components/add-money/add-money.component.html
+++ b/src/app/components/add-money/add-money.component.html
@@ -26,18 +26,18 @@
   <div class="container form-controll">
     <div class="row m-2">
       <div class="col-6">
-        <app-load-money-button [amount]="smallAmount" (chosedAmount)="newAmountValue($event)"></app-load-money-button>
+        <app-load-money-button [amount]="smallAmount" (chosenAmount)="newAmountValue($event)"></app-load-money-button>
       </div>
       <div class="col-6">
-        <app-load-money-button [amount]="midAmount" (chosedAmount)="newAmountValue($event)"></app-load-money-button>
+        <app-load-money-button [amount]="midAmount" (chosenAmount)="newAmountValue($event)"></app-load-money-button>
       </div>
     </div>
     <div class="row m-2">
       <div class="col-6">
-        <app-load-money-button [amount]="bigAmount" (chosedAmount)="newAmountValue($event)"></app-load-money-button>
+        <app-load-money-button [amount]="bigAmount" (chosenAmount)="newAmountValue($event)"></app-load-money-button>
       </div>
       <div class="col-6">
-        <app-load-money-button [amount]="hugeAmount" (chosedAmount)="newAmountValue($event)" ></app-load-money-button>
+        <app-load-money-button [amount]="hugeAmount" (chosenAmount)="newAmountValue($event)" ></app-load-money-button>
       </div>
     </div>
   </div>
