added status, isOffer and isBooked in table

--- a/src/app/components/tour-table/tour-table.component.css
+++ b/src/app/components/tour-table/tour-table.component.css
@@ -18,8 +18,13 @@ td
   vertical-align: middle;
 }
 
-button:hover{
+button.green:hover{
   background-color: #005B51;
+}
+
+button.evaluation:hover {
+  background-color: #FF9300;
+  color: white;
 }
 
 table {
@@ -35,3 +40,4 @@ button {
     width: 100%;
   }
 }
+
