--- a/src/app/components/tour-table/tour-table.component.html
+++ b/src/app/components/tour-table/tour-table.component.html
@@ -1,35 +1,81 @@
-<table class="table p-4" *ngIf="userService.currUser">
-  <thead class="thead-cargo">
-  <tr>
-    <th class="text-center">Von</th>
-    <th class="text-center">Nach</th>
-    <th class="text-center">Wann?</th>
-    <th class="text-center">Um?</th>
-    <th class="text-center">Dauer</th>
-    <th class="text-center">Stauraum</th>
-    <th class="text-center">Sitze</th>
-    <th class="text-center">Preis</th>
-    <th class="text-center"></th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let tour of usedList">
-    <td>{{tour.startCity}}</td>
-    <td>{{tour.endCity}}</td>
-    <td>{{tour.date}}</td>
-    <td>{{tour.startTime}}</td>
-    <td>{{tour.duration}}h</td>
-    <td>{{tour.storage}}</td>
-    <td>{{tour.seats}}</td>
-    <td>{{tour.price}}</td>
-    <td>
-      <button class="btn btn-outline-dark btn-sm mr-4" (click)="navigateToDetailsOrEdit(tour)">
-        <a *ngIf="userService.currUser.uid === tour.creatorID">Bearbeiten</a>
-        <a *ngIf="userService.currUser.uid !== tour.creatorID">Details</a>
-      </button>
+<div class="table-responsive">
 
-    </td>
-  </tr>
-  </tbody>
-</table>
 
+  <table class="table p-4" *ngIf="userService.currUser">
+    <thead class="thead-cargo">
+    <tr>
+      <th class="text-center">Art</th>
+      <th class="text-center">Gebucht</th>
+      <th class="text-center">Status</th>
+      <th class="text-center">Von</th>
+      <th class="text-center">Nach</th>
+      <th class="text-center">Wann?</th>
+      <th class="text-center">Um?</th>
+      <th class="text-center">Dauer</th>
+      <th class="text-center">Stauraum</th>
+      <th class="text-center">Sitze</th>
+      <th class="text-center">Preis</th>
+      <th class="text-center"></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let tour of usedList">
+      <td>{{(tour.isOffer) ? 'Angebot' : 'Anfrage'}}</td>
+      <td *ngIf="!tour.isBooked">
+        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14">
+          <path id="ic_clear_24px"
+                d="M19,6.41,17.59,5,12,10.59,6.41,5,5,6.41,10.59,12,5,17.59,6.41,19,12,13.41,17.59,19,19,17.59,13.41,12Z"
+                transform="translate(-5 -5)" fill="#dc3545"/>
+        </svg>
+      </td>
+      <td *ngIf="tour.isBooked">
+        <svg xmlns="http://www.w3.org/2000/svg" width="17.6" height="13.4" viewBox="0 0 17.6 13.4">
+          <path id="ic_done_24px" d="M9,16.2,4.8,12,3.4,13.4,9,19,21,7,19.6,5.6Z" transform="translate(-3.4 -5.6)"
+                fill="#28a745"/>
+        </svg>
+      </td>
+      <td *ngIf="this.switchStatus(tour) === 0">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+          <path id="ic_schedule_24px"
+                d="M11.99,2A10,10,0,1,0,22,12,10,10,0,0,0,11.99,2ZM12,20a8,8,0,1,1,8-8A8,8,0,0,1,12,20Zm.5-13H11v6l5.25,3.15L17,14.92l-4.5-2.67Z"
+                transform="translate(-2 -2)" fill="#645f5f"/>
+        </svg>
+      </td>
+      <td *ngIf="this.switchStatus(tour) === 1">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="16" viewBox="0 0 22 16">
+          <path id="ic_local_shipping_24px"
+                d="M20,8H17V4H3A2.006,2.006,0,0,0,1,6V17H3a3,3,0,0,0,6,0h6a3,3,0,0,0,6,0h2V12ZM6,18.5A1.5,1.5,0,1,1,7.5,17,1.5,1.5,0,0,1,6,18.5Zm13.5-9L21.46,12H17V9.5Zm-1.5,9A1.5,1.5,0,1,1,19.5,17,1.5,1.5,0,0,1,18,18.5Z"
+                transform="translate(-1 -4)" fill="#ff9300"/>
+        </svg>
+      </td>
+      <td *ngIf="this.switchStatus(tour) === 2">
+        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="17" viewBox="0 0 15 17">
+          <path id="ic_flag_24px" d="M14.4,6,14,4H5V21H7V14h5.6l.4,2h7V6Z" transform="translate(-5 -4)" fill="#28a745"/>
+        </svg>
+      </td>
+      <td>{{tour.startCity}}</td>
+      <td>{{tour.endCity}}</td>
+      <td>{{tour.date}}</td>
+      <td>{{tour.startTime}}</td>
+      <td>{{tour.duration}}h</td>
+      <td>{{tour.storage}}</td>
+      <td>{{tour.seats}}</td>
+      <td>{{tour.price}}</td>
+      <td>
+
+        <button class="btn btn-outline-dark btn-sm mx-auto green" (click)="navigateToDetailsOrEdit(tour)">
+          <a *ngIf="userService.currUser.uid === tour.creatorID">Bearbeiten</a>
+          <a *ngIf="userService.currUser.uid !== tour.creatorID">Details</a>
+        </button>
+
+        <button *ngIf="switchStatus(tour) === 2 && userIsPassenger(tour) && !isCreator(tour)"
+                class="btn btn-outline-warning btn-sm mx-auto mt-2 evaluation">
+          <a>Bewerten</a>
+        </button>
+
+      </td>
+    </tr>
+    </tbody>
+  </table>
+
+</div>
