--- a/src/app/components/tour-table/tour-table.component.html
+++ b/src/app/components/tour-table/tour-table.component.html
@@ -70,7 +70,7 @@
 
         <button *ngIf="switchStatus(tour) === 2 && userIsPassenger(tour) && !isCreator(tour)"
                 class="btn btn-outline-warning btn-sm mx-auto mt-2 evaluation"
-                (click)="openEvaluation()">
+                (click)="openEvaluation(tour)">
           <a>Bewerten</a>
         </button>
 
