WIP: KMSWS21T04-84 Add evaluation (#69)
* initial commit

* added modal window for evaluation

* pass data through modal

* added card, if user is not logged in

* added logic of evaluation

--- a/src/app/components/tour-table/tour-table.component.html
+++ b/src/app/components/tour-table/tour-table.component.html
@@ -69,7 +69,8 @@
         </button>
 
         <button *ngIf="switchStatus(tour) === 2 && userIsPassenger(tour) && !isCreator(tour)"
-                class="btn btn-outline-warning btn-sm mx-auto mt-2 evaluation">
+                class="btn btn-outline-warning btn-sm mx-auto mt-2 evaluation"
+                (click)="openEvaluation(tour)">
           <a>Bewerten</a>
         </button>
 
