--- a/src/app/components/tour-edit/tour-edit.component.html
+++ b/src/app/components/tour-edit/tour-edit.component.html
@@ -126,7 +126,7 @@
     <div class="row">
       <div class="col">
         <label for="exampleFormControlTextarea1" class="form-label logoGreenDark">Beschreibung</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" [(ngModel)]="description"></textarea>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" [(ngModel)]="description"></textarea>
       </div>
       <div class="col">
         <div class="row" *ngIf="this.isOffer">
@@ -144,8 +144,7 @@
         <div class="row" *ngIf="tour?.driver === userData.currUser.uid">
           <div class="form-group">
             <label for="state" class="logoGreenDark">Status</label>
-            <select name="" id="state" class="form-control" [(ngModel)]="state">
-              <option value="{{state}}">{{state}}</option>
+            <select #status name="" id="state" class="form-control" (change)="changeStatus(status.value)">
               <option value="0">Noch nicht losgefahren!</option>
               <option value="1">Auf dem Weg!</option>
               <option value="2">Bei ihnen angekommen!</option>
