added alerts and the possibility to choose 0

--- a/src/app/components/add-evaluation/add-evaluation.component.html
+++ b/src/app/components/add-evaluation/add-evaluation.component.html
@@ -27,6 +27,7 @@
             <label for="inputGroupSelect01" class="input-group-text logoGreenDark h5">Sterne</label>
           </div>
           <select #selectedList class="custom-select" id="inputGroupSelect01">
+            <option value="0">0 Stern</option>
             <option value="1">1 Stern</option>
             <option value="2">2 Sterne</option>
             <option value="3">3 Sterne</option>
